[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/art/ui/menu/menu_bg.png" type="Texture" id=1]
[ext_resource path="res://assets/art/ui/menu/buttons/pressed.png" type="Texture" id=2]
[ext_resource path="res://assets/art/ui/menu/buttons/hover.png" type="Texture" id=3]
[ext_resource path="res://assets/ui/theme/cc_font_large.tres" type="Theme" id=4]
[ext_resource path="res://assets/ui/theme/cc_font_medium.tres" type="Theme" id=5]
[ext_resource path="res://assets/art/ui/menu/buttons/normal.png" type="Texture" id=6]
[ext_resource path="res://src/game/MainMenu.gd" type="Script" id=7]

[node name="MainMenu" type="Node2D"]
script = ExtResource( 7 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -228.5
margin_right = 228.5
margin_bottom = 600.0
texture = ExtResource( 1 )
patch_margin_left = 11
patch_margin_top = 11
patch_margin_right = 11
patch_margin_bottom = 11
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -178.0
margin_right = 178.0
margin_bottom = 450.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 30.0
margin_right = 356.0
margin_bottom = 117.0
theme = ExtResource( 4 )
custom_colors/font_color = Color( 0.254902, 0.176471, 0, 1 )
text = "Menu"
align = 1
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 121.0
margin_right = 356.0
margin_bottom = 151.0
rect_min_size = Vector2( 0, 30 )

[node name="MarginContainer4" type="MarginContainer" parent="VBoxContainer"]
margin_top = 155.0
margin_right = 356.0
margin_bottom = 185.0
rect_min_size = Vector2( 0, 30 )

[node name="New Game" type="TextureButton" parent="VBoxContainer"]
margin_top = 189.0
margin_right = 356.0
margin_bottom = 262.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 3 )

[node name="Label" type="Label" parent="VBoxContainer/New Game"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 5 )
custom_colors/font_color = Color( 0.254902, 0.176471, 0, 1 )
text = "New Game"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
margin_top = 266.0
margin_right = 356.0
margin_bottom = 296.0
rect_min_size = Vector2( 0, 30 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeaveFeedback" type="TextureButton" parent="VBoxContainer"]
margin_top = 300.0
margin_right = 356.0
margin_bottom = 373.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 3 )

[node name="Label" type="Label" parent="VBoxContainer/LeaveFeedback"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 5 )
custom_colors/font_color = Color( 0.254902, 0.176471, 0, 1 )
text = "Feedback"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer"]
margin_top = 377.0
margin_right = 356.0
margin_bottom = 407.0
rect_min_size = Vector2( 0, 30 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="TextureButton" parent="VBoxContainer"]
margin_top = 411.0
margin_right = 356.0
margin_bottom = 484.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 3 )

[node name="Label" type="Label" parent="VBoxContainer/Exit"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 5 )
custom_colors/font_color = Color( 0.254902, 0.176471, 0, 1 )
text = "Exit"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="VBoxContainer/New Game" to="." method="_on_New_Game_pressed"]
[connection signal="pressed" from="VBoxContainer/LeaveFeedback" to="." method="_on_LeaveFeedback_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
